[gd_scene load_steps=12 format=2]

[ext_resource path="res://sound/birdfish-happy-loop-6199.mp3" type="AudioStream" id=1]
[ext_resource path="res://projek1.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/4128685.jpg-eff32bdce432af6f64e9668dc2408082.stex"

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.588235, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.588235, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.588235, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Backround" type="Sprite" parent="."]
position = Vector2( 512, 305 )
scale = Vector2( 0.301176, 0.3075 )
texture = SubResource( 3 )

[node name="About" type="Button" parent="."]
margin_left = 425.0
margin_top = 277.0
margin_right = 642.0
margin_bottom = 321.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "About"

[node name="Page1" type="Button" parent="."]
margin_left = 658.0
margin_top = 379.0
margin_right = 970.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 240, 97 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 6 )
text = "Bentuk Dasar"

[node name="Tittle" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 82.0
margin_top = 94.0
margin_right = 1782.0
margin_bottom = 225.0
custom_fonts/font = ExtResource( 3 )
text = "Deep Sea Treasure"

[node name="Button" type="Button" parent="."]
margin_left = 65.0
margin_top = 385.0
margin_right = 407.0
margin_bottom = 426.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 7 )
text = "Cara Penggunaan"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="PolaAnimasi2D" type="Button" parent="."]
margin_left = 392.0
margin_top = 513.0
margin_right = 692.0
margin_bottom = 557.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 5 )
text = "Pola 2D Animasi"

[connection signal="pressed" from="About" to="." method="_buttonAbout"]
[connection signal="pressed" from="Page1" to="." method="_buttonPage1"]
[connection signal="pressed" from="Page1" to="." method="bentukDasar"]
[connection signal="pressed" from="Button" to="." method="buttonHowTo"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PolaAnimasi2D" to="." method="_on_PolaAnimasi2D_pressed"]
